# infralens

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PHASE1_DESIGN.md  PHASE2_DESIGN.md  PHASE3_DESIGN.md  PHASE4_DESIGN.md  PHASE5_DESIGN.md  README.md  Tiltfile  docker-compose.yml
config/: default.toml  development.toml
crates/infralens-cluster/: Cargo.toml
crates/infralens-cluster/src/: config.rs  error.rs  lib.rs  membership.rs  replication.rs  ring.rs  router.rs
crates/infralens-common/: Cargo.toml
crates/infralens-common/src/: config.rs  error.rs  lib.rs  model.rs  schema.rs
crates/infralens-ingest/: Cargo.toml
crates/infralens-ingest/src/: error.rs  grpc.rs  http.rs  json_decoder.rs  lib.rs  normalizer.rs  processor.rs
crates/infralens-proto/: Cargo.toml  build.rs
crates/infralens-proto/src/: lib.rs
crates/infralens-query/: Cargo.toml
crates/infralens-query/src/: ast.rs  catalog.rs  error.rs  lexer.rs  lib.rs  parser.rs  planner.rs
crates/infralens-query/src/executor/: aggregate.rs  filter.rs  limit.rs  mod.rs  scan.rs  sort.rs
crates/infralens-query/src/functions/: eval.rs  mod.rs  temporal.rs
crates/infralens-query/src/optimizer/: cost.rs  mod.rs  rules.rs
crates/infralens-rpc/: Cargo.toml  build.rs
crates/infralens-rpc/src/: lib.rs  scatter_gather.rs  server.rs
crates/infralens-server/: Cargo.toml
crates/infralens-server/src/: main.rs  telemetry.rs
crates/infralens-storage/: Cargo.toml
crates/infralens-storage/src/: bloom.rs  compaction.rs  engine.rs  error.rs  lib.rs  memtable.rs  partition.rs  sstable.rs  wal.rs  zone_map.rs
crates/infralens-storage/tests/: engine_integration.rs
demos/: README.md  quickstart.ps1  quickstart.sh
demos/payloads/: sample-logs.json  sample-metrics.json  sample-traces.json
deploy/: prometheus.yml
deploy/helm/infralens/: Chart.yaml  values.yaml
deploy/helm/infralens/templates/: NOTES.txt  _helpers.tpl  pdb.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
deploy/kubernetes/operator/: Cargo.toml
deploy/kubernetes/operator/src/: crd.rs  main.rs  reconciler.rs
docs/: design-decisions.md  load-testing.md
docs/architecture/: cluster.md  llm-copilot.md  overview.md  query-engine.md  storage-engine.md
load-tests/: bench.py  locustfile.py
proto/infralens/internal/v1/: internal.proto
proto/opentelemetry/proto/collector/logs/v1/: logs_service.proto
proto/opentelemetry/proto/collector/metrics/v1/: metrics_service.proto
proto/opentelemetry/proto/collector/trace/v1/: trace_service.proto
proto/opentelemetry/proto/common/v1/: common.proto
proto/opentelemetry/proto/logs/v1/: logs.proto
proto/opentelemetry/proto/metrics/v1/: metrics.proto
proto/opentelemetry/proto/resource/v1/: resource.proto
proto/opentelemetry/proto/trace/v1/: trace.proto
services/api-gateway/: Dockerfile  go.mod  go.sum  main.go
services/llm-copilot/: Dockerfile  main.py  requirements.txt
services/llm-copilot/copilot/: config.py  grammar.py  llm.py  models.py  rca.py
