[workspace]
resolver = "2"
members = [
    "crates/infralens-common",
    "crates/infralens-proto",
    "crates/infralens-storage",
    "crates/infralens-ingest",
    "crates/infralens-server",
    "crates/infralens-cluster",
    "crates/infralens-rpc",
    "crates/infralens-query",
]

[workspace.dependencies]
# ── Async runtime ──────────────────────────────────────────────────────────────
tokio          = { version = "1.40", features = ["full"] }
tokio-stream   = { version = "0.1" }

# ── gRPC / protobuf ────────────────────────────────────────────────────────────
tonic          = { version = "0.12" }
prost          = { version = "0.13" }
prost-types    = { version = "0.13" }

# ── HTTP ───────────────────────────────────────────────────────────────────────
axum           = { version = "0.7", features = ["macros"] }
tower          = { version = "0.5" }
tower-http     = { version = "0.6", features = ["trace", "cors"] }
hyper          = { version = "1" }

# ── Serialisation ──────────────────────────────────────────────────────────────
serde          = { version = "1", features = ["derive"] }
serde_json     = { version = "1" }
bincode        = { version = "1.3" }

# ── Columnar / Parquet ─────────────────────────────────────────────────────────
arrow          = { version = "53", features = ["ipc"] }
arrow-ord      = { version = "53" }
arrow-arith    = { version = "53" }
parquet        = { version = "53", features = ["arrow"] }

# ── Observability ──────────────────────────────────────────────────────────────
tracing                    = { version = "0.1" }
tracing-subscriber         = { version = "0.3", features = ["env-filter", "json"] }
metrics                    = { version = "0.23" }
metrics-exporter-prometheus = { version = "0.15" }

# ── Utilities ──────────────────────────────────────────────────────────────────
bytes             = { version = "1" }
dashmap           = { version = "6" }
crossbeam-channel = { version = "0.5" }
crc32fast         = { version = "1" }
parking_lot       = { version = "0.12" }
config            = { version = "0.14" }
thiserror         = { version = "1" }
anyhow            = { version = "1" }
rand              = { version = "0.8" }
chrono            = { version = "0.4", features = ["serde"] }
uuid              = { version = "1", features = ["v4"] }
num_cpus          = { version = "1" }

# ── Cluster / distributed ──────────────────────────────────────────────────────
etcd-client    = { version = "0.14" }

# ── Build utilities (referenced in crate-level Cargo.toml build-deps) ──────────
tonic-build    = { version = "0.12" }
protox         = { version = "0.7" }

[patch.crates-io]
# Replaces etcd-client's build.rs with one that uses protox (pure Rust),
# eliminating the need for an external protoc binary.
etcd-client = { path = "vendor/etcd-client" }
