[package]
name    = "infralens-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
infralens-common  = { path = "../infralens-common" }
infralens-proto   = { path = "../infralens-proto" }
infralens-storage = { path = "../infralens-storage" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
hyper        = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
metrics      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
