[package]
name    = "infralens-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
prost       = { workspace = true }
prost-types = { workspace = true }
tonic       = { workspace = true }
bytes       = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protox      = { workspace = true }
