[package]
name    = "infralens-query"
version = "0.1.0"
edition = "2021"

[dependencies]
infralens-common  = { path = "../infralens-common" }
infralens-storage = { path = "../infralens-storage" }

tokio      = { workspace = true }
arrow      = { workspace = true }
arrow-ord  = { workspace = true }
arrow-arith = { workspace = true }
parquet    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
metrics    = { workspace = true }
chrono     = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = "3"
