[package]
name    = "infralens-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
infralens-common  = { path = "../infralens-common" }
infralens-cluster = { path = "../infralens-cluster" }
infralens-storage = { path = "../infralens-storage" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
bytes        = { workspace = true }
arrow        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
metrics      = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protox      = { workspace = true }
