[package]
name    = "infralens-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "infralens-server"
path = "src/main.rs"

[dependencies]
infralens-common  = { path = "../infralens-common" }
infralens-proto   = { path = "../infralens-proto" }
infralens-storage = { path = "../infralens-storage" }
infralens-ingest  = { path = "../infralens-ingest" }

tokio       = { workspace = true }
tonic       = { workspace = true }
axum        = { workspace = true }
tower-http  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
metrics     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
anyhow      = { workspace = true }
