[package]
name    = "infralens-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
infralens-common = { path = "../infralens-common" }

tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }
arrow         = { workspace = true }
parquet       = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
bytes         = { workspace = true }
parking_lot   = { workspace = true }
dashmap       = { workspace = true }
crc32fast     = { workspace = true }
rand          = { workspace = true }
metrics       = { workspace = true }
chrono        = { workspace = true }

[dev-dependencies]
tempfile   = "3"
proptest   = "1"
tokio      = { workspace = true }
