[package]
name    = "infralens-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "infralens-operator"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1.40", features = ["full"] }
kube           = { version = "0.96", features = ["runtime", "derive", "client"] }
k8s-openapi    = { version = "0.23", features = ["v1_31"] }
schemars       = { version = "0.8" }
serde          = { version = "1", features = ["derive"] }
serde_json     = { version = "1" }
thiserror      = { version = "1" }
anyhow         = { version = "1" }
tracing        = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures        = { version = "0.3" }
